--- a/CCFD-model.ipynb
+++ b/CCFD-model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "ad07a109-c08c-4019-ae04-18eeda93fdfd",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "7be566e4-7a9d-462b-b964-2632c4bbaf91",
    "metadata": {},
    "outputs": [
@@ -49,8 +49,7 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting seaborn\n",
-      "  Using cached seaborn-0.13.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Requirement already satisfied: seaborn in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (0.13.2)\n",
       "Requirement already satisfied: numpy!=1.24.0,>=1.20 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from seaborn) (2.2.6)\n",
       "Requirement already satisfied: pandas>=1.2 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from seaborn) (2.3.0)\n",
       "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from seaborn) (3.10.7)\n",
@@ -64,10 +63,7 @@
       "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.9.0.post0)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from pandas>=1.2->seaborn) (2025.2)\n",
       "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from pandas>=1.2->seaborn) (2025.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.17.0)\n",
-      "Using cached seaborn-0.13.2-py3-none-any.whl (294 kB)\n",
-      "Installing collected packages: seaborn\n",
-      "Successfully installed seaborn-0.13.2\n"
+      "Requirement already satisfied: six>=1.5 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.17.0)\n"
      ]
     },
     {
@@ -86,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "7c60335a-04bc-4187-90ec-4620db8d384e",
    "metadata": {},
    "outputs": [
@@ -131,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "c6300b7e-8b39-456b-830c-9689fe8c23e7",
    "metadata": {},
    "outputs": [
@@ -140,79 +136,11 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting scikit-learn\n",
-      "  Using cached scikit_learn-1.7.2-cp313-cp313-win_amd64.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (1.7.2)\n",
       "Requirement already satisfied: numpy>=1.22.0 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from scikit-learn) (2.2.6)\n",
-      "Collecting scipy>=1.8.0 (from scikit-learn)\n",
-      "  Using cached scipy-1.16.3-cp313-cp313-win_amd64.whl.metadata (60 kB)\n",
-      "Collecting joblib>=1.2.0 (from scikit-learn)\n",
-      "  Using cached joblib-1.5.2-py3-none-any.whl.metadata (5.6 kB)\n",
-      "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
-      "  Using cached threadpoolctl-3.6.0-py3-none-any.whl.metadata (13 kB)\n",
-      "Using cached scikit_learn-1.7.2-cp313-cp313-win_amd64.whl (8.7 MB)\n",
-      "Using cached joblib-1.5.2-py3-none-any.whl (308 kB)\n",
-      "Using cached scipy-1.16.3-cp313-cp313-win_amd64.whl (38.5 MB)\n",
-      "Using cached threadpoolctl-3.6.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn\n",
-      "\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   ---------- ----------------------------- 1/4 [scipy]\n",
-      "   -------------------- ------------------- 2/4 [joblib]\n",
-      "   -------------------- ------------------- 2/4 [joblib]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ------------------------------ --------- 3/4 [scikit-learn]\n",
-      "   ---------------------------------------- 4/4 [scikit-learn]\n",
-      "\n",
-      "Successfully installed joblib-1.5.2 scikit-learn-1.7.2 scipy-1.16.3 threadpoolctl-3.6.0\n"
+      "Requirement already satisfied: scipy>=1.8.0 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from scikit-learn) (1.16.3)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from scikit-learn) (1.5.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from scikit-learn) (3.6.0)\n"
      ]
     },
     {
@@ -229,16 +157,12 @@
      "output_type": "stream",
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting imbalanced-learn\n",
-      "  Downloading imbalanced_learn-0.14.0-py3-none-any.whl.metadata (8.8 kB)\n",
+      "Requirement already satisfied: imbalanced-learn in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (0.14.0)\n",
       "Requirement already satisfied: numpy<3,>=1.25.2 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from imbalanced-learn) (2.2.6)\n",
       "Requirement already satisfied: scipy<2,>=1.11.4 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from imbalanced-learn) (1.16.3)\n",
       "Requirement already satisfied: scikit-learn<2,>=1.4.2 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from imbalanced-learn) (1.7.2)\n",
       "Requirement already satisfied: joblib<2,>=1.2.0 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from imbalanced-learn) (1.5.2)\n",
-      "Requirement already satisfied: threadpoolctl<4,>=2.0.0 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from imbalanced-learn) (3.6.0)\n",
-      "Downloading imbalanced_learn-0.14.0-py3-none-any.whl (239 kB)\n",
-      "Installing collected packages: imbalanced-learn\n",
-      "Successfully installed imbalanced-learn-0.14.0\n"
+      "Requirement already satisfied: threadpoolctl<4,>=2.0.0 in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from imbalanced-learn) (3.6.0)\n"
      ]
     },
     {
@@ -258,25 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "7287c3bc-e500-4e43-a21f-8e2891bc6eb3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'StanderdScaler' from 'sklearn.preprocessing' (C:\\Users\\sheha\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\sklearn\\preprocessing\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpreprocessing\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m StanderdScaler\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mload_data\u001b[39m(path=\u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mE:\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mGithub repo\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mCredit-Crad-Fraud-Detetction\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mdata\u001b[39m\u001b[33m\\\u001b[39m\u001b[33mcreditcard.csv\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m      5\u001b[39m     datafile=pd.read_csv(path)\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'StanderdScaler' from 'sklearn.preprocessing' (C:\\Users\\sheha\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\sklearn\\preprocessing\\__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.preprocessing import StanderdScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
     "\n",
     "def load_data(path=r\"E:\\Github repo\\Credit-Crad-Fraud-Detetction\\data\\creditcard.csv\"):\n",
     "    datafile=pd.read_csv(path)\n",
@@ -285,11 +198,16 @@
     "    return X,y\n",
     "\n",
     "def preprocess(X):\n",
-    "    X=X.copy()\n",
-    "    scaler=StanderScaler()\n",
-    "    X['Amount']=scaler.fit_transform(X['Amoun'])\n",
-    "    X['Time']=scaler.fit_tarnsform(X['Time'])\n",
-    "    return X,scaler\n",
+    "    X = X.copy()\n",
+    "    \n",
+    "    scaler_amount = StandardScaler()\n",
+    "    scaler_time = StandardScaler()\n",
+    "    \n",
+    "    X['Amount'] = scaler_amount.fit_transform(X['Amount'].values.reshape(-1, 1))\n",
+    "    X['Time']   = scaler_time.fit_transform(X['Time'].values.reshape(-1, 1))\n",
+    "    \n",
+    "    return X, scaler_amount,scaler_time\n",
+    "\n",
     "\n",
     "    \n",
     "    "
@@ -297,25 +215,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "aeb04b2c-3afc-4137-a46f-2ac76da1fc1e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before: {0: 227451, 1: 394}\n",
+      "After: {0: 227451, 1: 227451}\n"
+     ]
+    }
+   ],
    "source": [
     "from imblearn.over_sampling import SMOTE\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X,y=load_data()\n",
-    "X,scaler=preprocess(X)\n",
+    "X,scaler_amount,scaler_time=preprocess(X)\n",
     "\n",
     "X_train, X_test, y_train, y_test, =train_test_split(X,y, test_size=0.2,random_state=42,stratify=y)\n",
     "\n",
     "sm=SMOTE(random_state=42)\n",
-    "X_train_res,y_train_res=sm..fit_resample(X_train,y_train)\n",
+    "X_train_res,y_train_res=sm.fit_resample(X_train,y_train)\n",
     "\n",
-    "print(\"Before:\",y_train.value_counts().todict())\n",
-    "print(\"After:\",pd.Series(y_train_res).value.counts().to_dict())\n"
+    "print(\"Before:\", y_train.value_counts().to_dict())\n",
+    "print(\"After:\", pd.Series(y_train_res).value_counts().to_dict())\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "add142c9-ae40-406c-9928-b0c67cdd32e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, roc_auc_score\n",
+    "\n",
+    "rf=RandomForestClassifier(n_estimators=100,random_state=42,n_jobs=-1)\n",
+    "rf.fit(X_train_res,y_train_res)\n",
+    "\n",
+    "y_pred=rf.predict(X_test)\n",
+    "y_proba=rf.predict_proba(X_test)[:,1]\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "print(\"ROC AUC:\", roc_auc_score(y_test, y_proba))\n",
+    "print(confusion_matrix(y_test, y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "884a2c0d-4af8-4593-9523-ad4ed874b302",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
