--- a/CCFD-model.ipynb
+++ b/CCFD-model.ipynb
@@ -247,10 +247,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "add142c9-ae40-406c-9928-b0c67cdd32e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     56864\n",
+      "           1       0.85      0.84      0.84        98\n",
+      "\n",
+      "    accuracy                           1.00     56962\n",
+      "   macro avg       0.92      0.92      0.92     56962\n",
+      "weighted avg       1.00      1.00      1.00     56962\n",
+      "\n",
+      "ROC AUC: 0.973103297664029\n",
+      "[[56849    15]\n",
+      " [   16    82]]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import classification_report, confusion_matrix, roc_auc_score\n",
@@ -268,8 +287,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "id": "68fc0290-5b52-412c-a884-6dd402a74ff8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting xgboost\n",
+      "  Using cached xgboost-3.1.1-py3-none-win_amd64.whl.metadata (2.1 kB)\n",
+      "Requirement already satisfied: numpy in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from xgboost) (2.2.6)\n",
+      "Requirement already satisfied: scipy in c:\\users\\sheha\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.13_qbz5n2kfra8p0\\localcache\\local-packages\\python313\\site-packages (from xgboost) (1.16.3)\n",
+      "Using cached xgboost-3.1.1-py3-none-win_amd64.whl (72.0 MB)\n",
+      "Installing collected packages: xgboost\n",
+      "Successfully installed xgboost-3.1.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.2 -> 25.3\n",
+      "[notice] To update, run: C:\\Users\\sheha\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install xgboost\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "884a2c0d-4af8-4593-9523-ad4ed874b302",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sheha\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\\xgboost\\training.py:199: UserWarning: [17:10:14] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:790: \n",
+      "Parameters: { \"eval_matric\", \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     56864\n",
+      "           1       0.61      0.87      0.71        98\n",
+      "\n",
+      "    accuracy                           1.00     56962\n",
+      "   macro avg       0.80      0.93      0.86     56962\n",
+      "weighted avg       1.00      1.00      1.00     56962\n",
+      "\n",
+      "ROC AUC: 0.9768807494860634\n"
+     ]
+    }
+   ],
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "xgb=XGBClassifier(\n",
+    "    n_estimators=200,\n",
+    "    learning_rate=0.1,\n",
+    "    max_depth=6,\n",
+    "    use_label_encoder=False,\n",
+    "    eval_matric='logloss',\n",
+    "    random_state=42,\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "\n",
+    "xgb.fit(X_train_res,y_train_res)\n",
+    "\n",
+    "y_pred_xgb=xgb.predict(X_test)\n",
+    "y_proba_xgb=xgb.predict_proba(X_test)[:,1]\n",
+    "\n",
+    "print(classification_report(y_test, y_pred_xgb))\n",
+    "print(\"ROC AUC:\",roc_auc_score(y_test,y_proba_xgb))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d867a01-482c-433c-a17f-2f38c057043d",
    "metadata": {},
    "outputs": [],
    "source": []
